2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-10-05  Andreas Kupries <andreask@activestate.com>

	* jpeg.tcl: Accepted last-minute fixes from Aaron in the exif
	  decoder code.

2004-08-16  Aaron Faupell <afaupell@users.sourceforge.net>

	* jpeg.tcl: added commands isJPEG, stripJPEG, formatExif, exifKeys
	* jpeg.man: updated for new commands, new examples

2004-05-26  Aaron Faupell <afaupell@users.sourceforge.net>

	* jpeg.tcl: rewritten/factored
	* jpeg.man: updated

2004-05-07  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* New module for querying JPEG images, and manipulating their
	  comments.